--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.12.0",
     "react-credit-cards": "^0.8.0",
     "react-dom": "^16.12.0",
+    "react-moment": "^0.9.7",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
