--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "currency.js": "^1.2.2",
     "dinero.js": "^1.6.0",
     "moment": "^2.24.0",
+    "pure-react-carousel": "^1.24.1",
     "react": "^16.12.0",
     "react-credit-cards": "^0.8.0",
     "react-dom": "^16.12.0",
