--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.7.7",
+    "@glidejs/glide": "^3.4.1",
     "@nivo/bar": "^0.61.1",
     "@nivo/line": "^0.61.1",
     "@testing-library/jest-dom": "^4.2.4",
